--- a/index.html
+++ b/index.html
@@ -1,188 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Portfolio</title>
+  </head>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>
-
-<!-- class="col-sm-12 col-md-4 col-lg-12" -->
-<body>
-  <div class="container">
-    <div class="card-portfolio-top">
-      <div class="product-pic" id="intro">
-        <img src="images/elisa_profile_pic.jpg" alt="Picture of Elisa" id="profile-pic">
+  <body>
+    <div class="container">
+      <div class="responsive-container">
+        <img class="pic mx-auto d-block" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
+        <div class="content">
+          <h2 class="title">Hi, I am Elisa, a back end developer and art conservator based in Berlin.</h2>
+          <p>
+            While running my own restoration workshop, I started to teach myself coding.
+            <!-- insert later
+            <a href=“https://www.lewagon.com/” target=“_blank” class="link"><img src=“images/LW-icon.png” alt=“leWagon” id=“le-wagon-picture”></a> -->
+            After the <a href="https://www.lewagon.com/" target="_blank" class="link">LeWagon-coding bootcamp</a>, I now work as a back end developer with focus on Ruby on Rails, excited by learning something new every day.
+            In my free time, you can find me taking extended walks in the forest with the family dog (or if I find the motivation, jogging), solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
+          </p>
+          <p>
+            Please feel free to look at my current and future projects.
+          </p>
+        </div>
       </div>
 
-      <div class="card-portfolio-text">
-        <h2>Hi, I am Elisa, a back end developer and art conservator based in Berlin.</h2>
-        <p>
-          While running my own restoration workshop, I started to teach myself coding.
-          After the <a href="https://www.lewagon.com/" target="_blank"><img src="images/le-wagon-0e68fc00a50ff351516ca01212d2dd940b4b2b89f3dd1ddaa1c83b307cd829eb.png" alt="icon leWagon" id="le-wagon-picture"></a>-boot camp, I now work as a back end developer with focus on Ruby on Rails, excited by learning something new every day.
-          In my free time, you can find me taking extended walks in the forest with the family dog (or if I find the motivation, jogging), solving jigsaw puzzles or Sudoku, reading a crime novel or learning a new language on Duolingo - currently Italian.
-        </p>
-        <p>
-          Please feel free to look at my current and future projects.
-        </p>
-
-        <div class="contact">
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
-            <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
-
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <!-- The text field -->
-                      <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
-
-                      <!-- The button used to copy the text -->
-                      <button onclick="copyEmail()">Copy</button>
-                      <!-- <p>codersquirrelbln@gmail.com</p> -->
-                     <!--  <form
-                        action="mailto:codersquirrelbln@gmail.com"
-                        method="POST"
-                        enctype="multipart/form-data"
-                        name="EmailTestForm">
-
-                      Your Name:<br>
-                      <input type="text" size="20" name="VisitorName"><br><br>
-
-                      Your Comment:<br>
-                      <textarea name="VisitorComment" rows="4" cols="20">
-                      </textarea><br><br>
-
-                      <input type="submit" value="Email This Form">
-
-                      </form> -->
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </ul>
+      <div class="responsive-container">
+        <div>
+          <h2 class="title">ElderMe</h2>
+        <img class="mb-3 mx-auto d-block" id="elderme-pic" src="images/eldermeLandingpageScreenshot.png" alt="Screenshot of the ElderMe app">
         </div>
-
-      </div>
-    </div>
-
-
-
-
-    <div class="container content">
-      <div class="card-portfolio">
-        <div class="product-pic">
-         <img src="images/eldermeLandingpageScreenshot.png" alt="Screenshot of the ElderMe app" id="elderme-pic">
-        </div>
-
-        <div class="card-portfolio-text">
-          <h2>ElderMe</h2>
-            <p>
-              ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" class="link"  target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a>.
-            </p>
-          <div class="button">
-            <a href="http://www.elderme.live/" target="_blank" class="btn-project">Go to Project</a>
-            <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="btn-project">See Code</a>
-            <a href="casestudy_elderme.html" class="btn-project">Read case study</a>
+        <div class="content">
+           <p class="mb-3">
+            ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a>.
+          </p>
+          <div class="button-project">
+             <a href="http://www.elderme.live/" target="_blank" class="button">Go to Project</a>
+             <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="button">See Code</a>
+            <a href="casestudy_elderme.html" class="button">Read case study</a>
           </div>
         </div>
       </div>
 
-      <div class="card-portfolio">
-        <div class="product-pic">
-          <img src="images/visa_calculator_landing.png" alt="Screenshot of the Visa calculator" id="calculator-pic">
+      <div class="responsive-container">
+        <div>
+          <h2 class="title">Visa Calculator</h2>
+          <img src="images/visa_calculator_landing.png" alt="Screenshot of the Visa calculator" id="calculator-pic" class="mb-3 mx-auto d-block">
         </div>
-
-        <div class="card-portfolio-text">
-          <h2>Visa Calculator</h2>
-          <p>
+        <div class="content">
+          <p class="mb-3">
             The visa calculator enables travellers to calculate one or multiple trips to a country or visa zone such as the Schengen Zone. The user can insert individual visa regulations such as ho many days out if a time frame you may be in the country. It informs the user how many days they can still use up or have to remove to not overstay the visit.
             This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a>.
           </p>
-          <div class="button">
-            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="btn-project">Go to Project</a>
-            <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="btn-project">See Code</a>
-            <a href="casestudy_calculator.html" class="btn-project">Read case study</a>
+          <div class="button-project" >
+            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="button">Go to Project</a>
+            <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="button">See Code</a>
+            <a href="casestudy_calculator.html" class="button">Read case study</a>
           </div>
         </div>
       </div>
 
-      <div class="card-portfolio">
-        <div class="product-pic">
-          <img src="images/roadmap.jpg" alt="drawn out roadmap" id="flashcard-pic">
-          <!-- <p class="coming-soon"><em>Coming soon</em></p> -->
+      <div class="responsive-container">
+        <div>
+          <h2 class="title">Flashcard App</h2>
+          <img src="images/roadmap.jpg" alt="drawn out roadmap" id="flashcard-pic" class="mb-3 mx-auto d-block">
         </div>
-
-        <div class="card-portfolio-text">
-          <h2>Flashcard App</h2>
-          <p>
+        <div class="content">
+          <p class="mb-3">
             This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
             This project will be build in Ruby on Rails in collaboration with designer <a href="http://stephaniehawkins.design/" target="_blank" class="link">Stephanie Hawkins</a>.
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
-          <div class="button">
-            <a href="work_in_progress.html" class="btn-project">Go to Project</a>
-            <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank"  class="btn-project">See Code</a>
-            <a href="casestudy_flashcards.html" class="btn-project">Read case study</a>
+          <div class="button-project">
+            <a href="work_in_progress.html" class="button">Go to Project</a>
+            <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank"  class="button">See Code</a>
+            <a href="casestudy_flashcards.html" class="button">Read case study</a>
           </div>
         </div>
       </div>
+
+      <div class="responsive-container">
+        <div class="content">
+          <h3 class="title">
+            Current Reading List
+          </h3>
+          <ul style="list-style-type:none">
+            <li>
+
+              <p>
+                Starting to read <strong><a href="http://www.blockchain-basics.com/" target="blank" class="link">Blockchain Basics</a></strong> by <em>Daniel Drescher</em> again. Ever since Blockchain@state, a one-day workshop at the State Department in Washington, DC, in 2017, the blockchain technology has fascinated me. I was still a full-time restorer and had nothing to do with programming. Yet the presented case studies showed that Blockchains can be used for more than cryptocurrencies, such as documenting changes in land ownership.
+              </p>
+            </li>
+            <li>
+              <p>
+                I am almost finished with reading <strong><a href="https://en.wikipedia.org/wiki/The_Innovators_(book)" target="_blank" class="link">The Innovators</a></strong> by <em>Walter Issacson</em>, a most interesting journey through the invention of the Computer and all related topics.
+              </p>
+            </li>
+            <li>
+              <p>
+               Since I am a huge crime novel fan, I am also listening to <strong>The Escape</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="reading">
-      <h3 id="reading-header">
-        Current Reading List
-      </h3>
-      <br>
-      <ul style="list-style-type:none">
-        <li>
-          <strong><a href="http://www.blockchain-basics.com/" target="blank" class="link">Blockchain Basics</a></strong> by <em>Daniel Drescher</em>.
-          <p>
-            Ever since Blockchain@state, a one-day workshop at the State Department in Washington, DC, in 2017, the blockchain technology has fascinated me. I was still a full-time restorer and had nothing to do with programming. Yet the presented case studies showed that Blockchains can be used for more than cryptocurrencies, such as documenting changes in land ownership.
-          </p>
-        </li>
-        <li>
-          <p>
-            I am almost finished with reading <strong><a href="https://en.wikipedia.org/wiki/The_Innovators_(book)" target="_blank" class="link">The Innovators</a></strong> by <em>Walter Issacson</em>, a most interesting journey through the invention of the Computer and all related topics.
-          </p>
-        </li>
-        <li>
-          <p>
-           Since I am a huge crime novel fan, I am also listening to <strong>The Escape</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
-          </p>
-        </li>
-      </ul>
-    </div>
+  <footer>
+  <div class="contact">
+    <ul class="list-inline">
+      <li class="list-inline-item footer">&copy 2019, Elisa Burghard</li>
+      <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
+      <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
+      <li class="list-inline-item footer icon-footer"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+        <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <!-- The text field -->
+                <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
-
+  </footer>
+  </body>
   <script src="javascript/main.js"></script>
-
-<footer>
-    <div class="contact">
-      <ul class="list-inline">
-        <li class="list-inline-item footer">&copy 2019, Elisa Burghard</li>
-        <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
-      </ul>
-    </div>
-
-</footer>
-</body>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
